Adjust grid col & row templates, add dash styling.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,45 @@
     <body>
         <div class="main-container">
             <div class="dashboard-menu">
+                <img>
+                <h1 class="dashboard-header">Dashboard</h1>
                 <ul class="menu-list">
-                    <li class="menu-item top-menu">Home</li>
-                    <li class="menu-item top-menu">Profile</li>
-                    <li class="menu-item top-menu">Messages</li>
-                    <li class="menu-item top-menu">History</li>
-                    <li class="menu-item top-menu">Tasks</li>
-                    <li class="menu-item top-menu">Community</li>
-                    <li class="menu-item bottom-menu">Settings</li>
-                    <li class="menu-item bottom-menu">Support</li>
-                    <li class="menu-item bottom-menu">Privacy</li>
+                    <li class="menu-item top-menu">
+                        <img>
+                        <p>Home</p>
+                    </li>
+                    <li class="menu-item top-menu">
+                        <img>
+                        <p>Profile</p>
+                    </li>
+                    <li class="menu-item top-menu">
+                        <img>
+                        <p>Messages</p>
+                    </li>
+                    <li class="menu-item top-menu">
+                        <img>
+                        <p>History</p>
+                    </li>
+                    <li class="menu-item top-menu">
+                        <img>
+                        <p>Tasks</p>
+                    </li>
+                    <li class="menu-item top-menu">
+                        <img>
+                        <p>Community</p>
+                    </li>
+                    <li class="menu-item bottom-menu">
+                        <img>
+                        <p>Settings</p>
+                    </li>
+                    <li class="menu-item">
+                        <img>
+                        <p>Support</p>
+                    </li>
+                    <li class="menu-item">
+                        <img>
+                        <p>Privacy</p>
+                    </li>
                 </ul>
             </div>
             <div class="admin-bar">
@@ -44,42 +73,33 @@
                 <div class="project-tile">
                     <h2 class="project-title">Super Project</h2>
                     <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
-                        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum 
-                        quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-                        labore et dolore magnam aliquam quaerat voluptatem</p>
+                        magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
                 </div>
                 <div class="project-tile">
                     <h2 class="project-title">Wonder Project</h2>
-                    <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
-                        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum 
+                    <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
                         quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-                        labore et dolore magnam aliquam quaerat voluptatem</p>
+                        labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </div>
                 <div class="project-tile">
                     <h2 class="project-title">Major Great</h2>
                     <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
-                        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum 
-                        quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-                        labore et dolore magnam aliquam quaerat voluptatem</p>
+                        magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
                 </div>
                 <div class="project-tile">
                     <h2 class="project-title">Total Topness</h2>
-                    <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
-                        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum 
+                    <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
                         quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-                        labore et dolore magnam aliquam quaerat voluptatem</p>
+                        labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </div>
                 <div class="project-tile">
                     <h2 class="project-title">Ultimately a Project</h2>
                     <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
-                        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum 
-                        quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-                        labore et dolore magnam aliquam quaerat voluptatem</p>
+                        magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
                 </div>
                 <div class="project-tile">
                     <h2 class="project-title">Managed Mock-up</h2>
-                    <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
-                        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum 
+                    <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
                         quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
                         labore et dolore magnam aliquam quaerat voluptatem</p>
                 </div>
