Add icons, images; Refine styling

--- a/index.html
+++ b/index.html
@@ -6,146 +6,172 @@
     </head>
     <body>
         <div class="main-container">
+            <div class="border-panel left-border-panel"></div>
             <div class="dashboard-menu">
-                <img>
+                <img class="dashboard-header-img" src="./icons/view-dashboard.svg">
                 <h1 class="dashboard-header">Dashboard</h1>
                 <ul class="menu-list">
                     <li class="menu-item top-menu">
-                        <img>
-                        <p>Home</p>
+                        <img class="menu-icon" src="./icons/home.svg">
+                        <p class="menu-option">Home</p>
                     </li>
                     <li class="menu-item top-menu">
-                        <img>
-                        <p>Profile</p>
+                        <img class="menu-icon" src="./icons/card-account-details-outline.svg">
+                        <p class="menu-option">Profile</p>
                     </li>
                     <li class="menu-item top-menu">
-                        <img>
-                        <p>Messages</p>
+                        <img class="menu-icon" src="./icons/message-reply.svg">
+                        <p class="menu-option">Messages</p>
                     </li>
                     <li class="menu-item top-menu">
-                        <img>
-                        <p>History</p>
+                        <img class="menu-icon" src="./icons/clock-time-three.svg">
+                        <p class="menu-option">History</p>
                     </li>
                     <li class="menu-item top-menu">
-                        <img>
-                        <p>Tasks</p>
+                        <img class="menu-icon" src="./icons/note-multiple.svg">
+                        <p class="menu-option">Tasks</p>
                     </li>
                     <li class="menu-item top-menu">
-                        <img>
-                        <p>Community</p>
+                        <img class="menu-icon" src="./icons/account-group.svg">
+                        <p class="menu-option">Community</p>
                     </li>
                     <li class="menu-item bottom-menu">
-                        <img>
-                        <p>Settings</p>
+                        <img class="menu-icon" src="./icons/cog.svg">
+                        <p class="menu-option">Settings</p>
                     </li>
                     <li class="menu-item">
-                        <img>
-                        <p>Support</p>
+                        <img class="menu-icon" src="./icons/help-box.svg">
+                        <p class="menu-option">Support</p>
                     </li>
                     <li class="menu-item">
-                        <img>
-                        <p>Privacy</p>
+                        <img class="menu-icon" src="./icons/shield-check.svg">
+                        <p class="menu-option">Privacy</p>
                     </li>
                 </ul>
             </div>
             <div class="admin-bar">
                 <div class="top-bar">
-                    <span class="search-bar"></span>
-                    <img>
-                    <img>
-                    <h1 class="admin-name">TaoMaru</h1>
+                    <div class="left-top-bar-container">
+                        <img class="search-icon top-bar-left" src="./icons/magnify.svg">
+                        <span class="search-bar top-bar-left"></span>
+                    </div>
+                    <div class="right-top-bar-container">
+                        <img class="notification-icon top-bar-right" src="./icons/bell-ring-outline.svg">
+                        <img class="admin-icon top-bar-right" src="./images/cute-panda-with-bamboo_138676-3053.avif">
+                        <h1 class="admin-name top-bar-right">TaoMaru</h1>
+                    </div>
                 </div>
                 <div class="bottom-bar">
                     <div class="admin-info">
-                        <img>
-                        <p>Heya,</p>
-                        <h1>TaoMau @TaoMaru</h1>
+                        <img class="large-admin-icon" src="./images/cute-panda-with-bamboo_138676-3053.avif">
+                        <div class="admin-greeting">
+                            <p class="greeting">Heya,</p>
+                            <h1 class="large-admin-name">TaoMaru (@taomaru)</h1>
+                        </div>
                     </div>
                     <div class="admin-btns">
-                        <button>New</button>
-                        <button>Upload</button>
-                        <button>Share</button>
+                        <button class="admin-btn">New</button>
+                        <button class="admin-btn">Upload</button>
+                        <button class="admin-btn">Share</button>
                     </div>
                 </div>
             </div>
             <div class="projects">
-                <h1>Projects</h1>
-                <div class="project-tile">
-                    <h2 class="project-title">Super Project</h2>
-                    <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
-                        magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                </div>
-                <div class="project-tile">
-                    <h2 class="project-title">Wonder Project</h2>
-                    <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
-                        quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-                        labore et dolore magnam aliquam quaerat voluptatem.</p>
-                </div>
-                <div class="project-tile">
-                    <h2 class="project-title">Major Great</h2>
-                    <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
-                        magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                </div>
-                <div class="project-tile">
-                    <h2 class="project-title">Total Topness</h2>
-                    <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
-                        quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-                        labore et dolore magnam aliquam quaerat voluptatem.</p>
-                </div>
-                <div class="project-tile">
-                    <h2 class="project-title">Ultimately a Project</h2>
-                    <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
-                        magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                </div>
-                <div class="project-tile">
-                    <h2 class="project-title">Managed Mock-up</h2>
-                    <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
-                        quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
-                        labore et dolore magnam aliquam quaerat voluptatem</p>
+                <h1 class="projects-header">Projects</h1>
+                <div class="projects-content-container">
+                    <div class="project-tile">
+                        <h2 class="project-title">Super Project</h2>
+                        <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+                            magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                    </div>
+                    <div class="project-tile">
+                        <h2 class="project-title">Wonder Project</h2>
+                        <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
+                            quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
+                            labore et dolore magnam aliquam quaerat voluptatem.</p>
+                    </div>
+                    <div class="project-tile">
+                        <h2 class="project-title">Major Great</h2>
+                        <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+                            magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                    </div>
+                    <div class="project-tile">
+                        <h2 class="project-title">Total Topness</h2>
+                        <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
+                            quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
+                            labore et dolore magnam aliquam quaerat voluptatem.</p>
+                    </div>
+                    <div class="project-tile">
+                        <h2 class="project-title">Ultimately a Project</h2>
+                        <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+                            magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                    </div>
+                    <div class="project-tile">
+                        <h2 class="project-title">Managed Mock-up</h2>
+                        <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
+                            quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
+                            labore et dolore magnam aliquam quaerat voluptatem</p>
+                    </div>
                 </div>
             </div>
             <div class="side-panel">
                 <h1 class="side-headline">Announcements</h1>
-                <div class="side-content-tile">
-                    <ul>
-                        <li class="announcements">
-                            <p class="announcement-title">Site Maintenance</p>
-                            <p class="announcement-content">Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                                cillum dolore eu fugiat nulla pariatur.</p>
-                        </li>
-                        <li class="announcements">
-                            <p class="announcement-title">Community Day</p>
-                            <p class="announcement-content">Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                                cillum dolore eu fugiat nulla pariatur.</p>
-                        </li>
-                        <li class="announcements last-announcement">
-                            <p class="announcement-title">Update Privacy Policy</p>
-                            <p class="announcement-content">Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                                cillum dolore eu fugiat nulla pariatur.</p>
-                        </li>
-                    </ul>
-                </div>
-                <h1 class="side-headline">Trending</h1>
-                <div class="side-content-tile">
-                    <ul>
-                        <li class="trending">
-                            <img>
-                            <p class="username">Gudetama</p>
-                            <p class="usertag">@gude</p>
-                        </li>
-                        <li class="trending">
-                            <img>
-                            <p class="username">TaoMaru</p>
-                            <p class="usertag">@taomaru</p>
-                        </li>
-                        <li class="trending">
-                            <img>
-                            <p class="username">Totoro</p>
-                            <p class="usertag">@totorororo</p>
-                        </li>
-                    </ul>
+                <div class="side-content-container">
+                    <div class="side-content-tile">
+                        <ul>
+                            <li class="announcements">
+                                <p class="announcement-title">Site Maintenance</p>
+                                <p class="announcement-content">Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                                    cillum dolore eu fugiat nulla pariatur.</p>
+                            </li>
+                            <li class="announcements">
+                                <p class="announcement-title">Community Day</p>
+                                <p class="announcement-content">Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                                    cillum dolore eu fugiat nulla pariatur.</p>
+                            </li>
+                            <li class="announcements last-announcement">
+                                <p class="announcement-title">Update Privacy Policy</p>
+                                <p class="announcement-content">Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                                    cillum dolore eu fugiat nulla pariatur.</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <h1 class="side-headline trending-headline">Trending</h1>
+                    <div class="side-content-tile">
+                        <ul>
+                            <li class="trending">
+                                <img class="userpic"src="./images/gudetama1_1440_1280.jpg">
+                                <div class="userinfo">
+                                    <p class="username">Gudetama</p>
+                                    <p class="usertag">@gude</p>
+                                </div>
+                            </li>
+                            <li class="trending">
+                                <img class="userpic" src="./images/cute-panda-with-bamboo_138676-3053.avif">
+                                <div class="userinfo">
+                                    <p class="username">TaoMaru</p>
+                                    <p class="usertag">@taomaru</p>
+                                </div>
+                            </li>
+                            <li class="trending">
+                                <img class="userpic" src="./images/totoro.png">
+                                <div class="userinfo">
+                                    <p class="username">Totoro</p>
+                                    <p class="usertag">@totorororo</p>
+                                </div>
+                            </li>
+                            <li class="trending last-trending">
+                                <img class="userpic" src="./images/happy-fairy-tail.jpg">
+                                <div class="userinfo">
+                                    <p class="username">Happy</p>
+                                    <p class="usertag">@happy</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+            <div class="border-panel right-border-panel"></div>
         </div>
     </body>
 </html>
