--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="main-container">
@@ -33,7 +36,7 @@
                     </li>
                     <li class="menu-item top-menu">
                         <img class="menu-icon" src="./icons/account-group.svg">
-                        <p class="menu-option">Community</p>
+                        <p class="menu-option">Communities</p>
                     </li>
                     <li class="menu-item bottom-menu">
                         <img class="menu-icon" src="./icons/cog.svg">
