Add social icons to project tiles; adjust content spacing

--- a/index.html
+++ b/index.html
@@ -86,34 +86,64 @@
                         <h2 class="project-title">Super Project</h2>
                         <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
                             magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                        <div class="project-icons">
+                            <img class="project-icon fav-project">
+                            <img class="project-icon watch-project">
+                            <img class="project-icon share-project">
+                        </div>
                     </div>
                     <div class="project-tile">
                         <h2 class="project-title">Wonder Project</h2>
                         <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
                             quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
                             labore et dolore magnam aliquam quaerat voluptatem.</p>
+                        <div class="project-icons">
+                            <img class="project-icon fav-project">
+                            <img class="project-icon watch-project">
+                            <img class="project-icon share-project">
+                        </div>
                     </div>
                     <div class="project-tile">
                         <h2 class="project-title">Major Great</h2>
                         <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
                             magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                        <div class="project-icons">
+                            <img class="project-icon fav-project">
+                            <img class="project-icon watch-project">
+                            <img class="project-icon share-project">
+                        </div>
                     </div>
                     <div class="project-tile">
                         <h2 class="project-title">Total Topness</h2>
                         <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
                             quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
                             labore et dolore magnam aliquam quaerat voluptatem.</p>
+                        <div class="project-icons">
+                            <img class="project-icon fav-project">
+                            <img class="project-icon watch-project">
+                            <img class="project-icon share-project">
+                        </div>
                     </div>
                     <div class="project-tile">
                         <h2 class="project-title">Ultimately a Project</h2>
                         <p class="project-info">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
                             magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                        <div class="project-icons">
+                            <img class="project-icon fav-project">
+                            <img class="project-icon watch-project">
+                            <img class="project-icon share-project">
+                        </div>
                     </div>
                     <div class="project-tile">
                         <h2 class="project-title">Managed Mock-up</h2>
                         <p class="project-info">Neque porro quisquam est, qui dolorem ipsum 
                             quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut 
                             labore et dolore magnam aliquam quaerat voluptatem</p>
+                        <div class="project-icons">
+                            <img class="project-icon fav-project">
+                            <img class="project-icon watch-project">
+                            <img class="project-icon share-project">
+                        </div>
                     </div>
                 </div>
             </div>
