Add dark mode toggle js, dark mode styling, and modify svg icon stroke colors

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                         <span class="search-bar top-bar-left"></span>
                     </div>
                     <div class="right-top-bar-container">
+                        <img class="mode-switch-icon top-bar-right">
                         <img class="notification-icon top-bar-right" src="./icons/bell-ring-outline.svg">
                         <img class="admin-icon top-bar-right" src="./images/cute-panda-with-bamboo_138676-3053.avif">
                         <h1 class="admin-name top-bar-right">TaoMaru</h1>
@@ -206,5 +207,6 @@
             </div>
             <div class="border-panel right-border-panel"></div>
         </div>
+        <script src="main.js"></script>
     </body>
 </html>
