Add burger icon, dark mode variant, and seconnd column to projects in midrange screens

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 </ul>
             </div>
             <div class="admin-bar">
+                <img class="burger-menu-icon">
                 <div class="top-bar">
                     <div class="left-top-bar-container">
                         <img class="search-icon top-bar-left" src="./icons/magnify.svg">
